enum Keys {
    static let UITesting = "--uitesting"

    enum Sidebar {
        static let List = "SidebarList"
        static let Row = "SidebarRow"
    }

    enum Middle {
        static let List = "MiddleList"
        static let Row = "MiddleRow"
    }

    enum Detail {
        static let CodeViewer = "CodeViewer"
        static let PathBar = "PathBar"
        static let PathBarFile = "PathBarFile"
    }

    enum Settings {
        static let AccentColorButton = "AccentColorButton"
    }

    enum Filters {
        static let FilterFiles = "FilterFiles"
    }
}
