...
        var body: some View {
            List(Array(folderRows), id: \.key) { folder, count in
                HStack {
                    Row(for: folder, badge: count)
                        .accessibilityIdentifier(Keys.Sidebar.Row)
                        .contextMenu {
                            DeleteFilesButton("Delete", folderKey: folder)
                        }

                    if deletionEnabled {
                        DeleteFilesButton("", folderKey: folder)
                            .foregroundColor(.red)
                            .buttonStyle(BorderlessButtonStyle())
...
